--- a/Box Model/index.html
+++ b/Box Model/index.html
@@ -14,12 +14,25 @@
         </div>
     </div>
 
+    <div id="box-model">
+        <!-- Every HTML Element treats like a Box. The box model is divided into 4-Parts. These are follows :
+                    (1) Content     (2) Padding     (3) Border      (4) Margin
+        -->
+    </div>
+
     <div>
         <!-- content-box gives you the default CSS box-sizing behavior. If you set an element's width to 100 pixels, then the element's content box will be 100 pixels wide, and the width of any border or padding will be added to the final rendered width, making the element wider than 100px. -->
 
         <!--border-box tells the browser to account for any border and padding in the values you specify for an element's width and height. If you set an element's width to 100 pixels, that 100 pixels will include any border or padding you added, and the content box will shrink to absorb that extra width. This typically makes it much easier to size elements. box-sizing: border-box is the default styling that browsers use for the <table>, <select>, and <button> elements, and for <input> elements whose type is radio, checkbox, reset, button, submit, color, or search.-->
 
         <!--It is often useful to set box-sizing to border-box to lay out elements.-->
+    </div>
+
+    <div id="outer">
+        <p>This is Outer div</p>
+        <div id="inner">
+            <p>This is inner div</p>
+        </div>
     </div>
 </body>
 </html>
